--- a/games/tetris/styles.css
+++ b/games/tetris/styles.css
@@ -1,8 +1,11 @@
 body{
     background-color: rgb(0, 0, 0);
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
 }
 
 #canvCont { 
-    width: 900px;
-    height: 900px;
+    width: 100vw;
+    height: 100vh;
 }
